Fix replies overflow. Increase media query braking point

--- a/src/CommentCard/RepliesSection/ReplySection.module.scss
+++ b/src/CommentCard/RepliesSection/ReplySection.module.scss
@@ -9,13 +9,14 @@
 	}
 
 	.replies {
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 		row-gap: 1rem;
 	}
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 775px) {
 	.ReplyCard {
 		column-gap: 2.4rem;
 
